Fixed tile images to not be blurry

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -54,6 +54,7 @@
   .img-tile {
     width: 45px;
     height: 45px;
+    object-fit: contain;
     cursor: pointer;
   }
 
